<resources>
    <string name="app_name">TestUIapp</string>
    <string name="user">Test user</string>
    <string name="test_fab">Test fab</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="november">November</string>
    <string name="number">Number</string>
    <string name="_25">25%</string>
    <string name="val_percent">%1$d%%</string>
    <string name="title">Title text</string>
    <string name="description">Description text</string>
    <string name="book">Book</string>
    <string name="events">Events</string>
    <string name="add_your_data_and_become_a_certified_sportsperson">Add your data and become a certified sportsperson</string>
    <string name="compete_your_profile">Compete your profile!</string>
    <string name="_5">5</string>
    <string name="define_your_level_for_this_activity">Define your level for this activity</string>
    <string name="not_now">Not now</string>
    <string name="define_your_level">Define your level</string>
    <string name="it_seems_that_you_have_not_yet_identified_your_level_for">It seems that you have not yet identified your level for</string>
    <string name="select_activity">SELECT ACTIVITY</string>
    <string name="places_available">Places available</string>
    <string name="_20">20</string>
    <string name="cancel">Cancel</string>
    <string name="antigravity">Antigravity</string>
    <string name="aqua_gym">Aqua gym</string>
    <string name="arrow_right"><![CDATA[>]]></string>
    
    <string name="agora_app_id">a62ad8679daa4cf9a6126b4e9fca1ad2</string>
    <string name="agora_app_token">007eJxTYAji1be7lcL3zrW06XBa7eeJM1WP3HRZWaL2L/mnpeWpP1UKDIlmRokpFmbmlimJiSbJaZaJZoZGZkkmqZZpyYmGiSlGMxomJDcEMjIsvv2UhZEBAkF8HoaS1OIS54zEvLzUHEMGBgDNGSTp</string>
    <string name="view_calling">View calling</string>

</resources>