<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/favourite_icon"
        android:title="@string/favorite" />

    <item
        android:id="@+id/empty"
        android:enabled="true"
        android:title="" />

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/search_icon"
        android:title="@string/search" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />

</menu>