<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/guideline_start_6_percent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/guideline_end_94_percent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPictureBottomSheetDefine"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_events_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separatorBottomSheetDefine"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_3sdp"
        android:background="@drawable/separator_background"
        app:layout_constraintBottom_toBottomOf="@+id/ivPictureBottomSheetDefine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivPictureBottomSheetDefine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleBottomSheetDefine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/define_your_level_for_this_activity"
        android:textColor="@color/gray"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvDescriptionBottomSheetDefine"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/ivPictureBottomSheetDefine"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescriptionBottomSheetDefine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/it_seems_that_you_have_not_yet_identified_your_level_for"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/btnNotNow"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitleBottomSheetDefine" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNotNow"
        android:background="@drawable/button_bottom_sheet_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/not_now"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionBottomSheetDefine" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bottom_sheet_full_background"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/define_your_level"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/btnNotNow" />

</androidx.constraintlayout.widget.ConstraintLayout>