<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_266sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="@dimen/_4sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_260sdp"
                android:background="@drawable/background_radius_16">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivPictureHorizontalItem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-24dp"
                    android:adjustViewBounds="true"
                    android:foregroundGravity="center"
                    android:src="@drawable/outdoors"
                    app:layout_constraintBottom_toTopOf="@id/tvTitleHorizontalItem"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitleHorizontalItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:maxLines="1"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvDescriptionHorizontalItem"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivPictureHorizontalItem" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDescriptionHorizontalItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:maxLines="1"
                    android:text="@string/description"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleHorizontalItem" />

                <Button
                    android:id="@+id/btnBookHorizontalItem"
                    android:layout_width="@dimen/_88sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:background="@drawable/background_radius_16"
                    android:text="@string/book"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnEventsHorizontalItem"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btnEventsHorizontalItem"
                    android:layout_width="@dimen/_88sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:background="@drawable/background_radius_16"
                    android:text="@string/events"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnBookHorizontalItem" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEventsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-4dp"
                    android:background="@drawable/background_events_count"
                    android:elevation="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:text="5"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/btnEventsHorizontalItem"
                    app:layout_constraintTop_toTopOf="@id/btnEventsHorizontalItem" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_rating_bar"
            android:elevation="@dimen/_4sdp"/>

        <RatingBar
            android:id="@+id/rbHorizontalItem"
            style="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:elevation="@dimen/_4sdp"
            android:numStars="5"
            android:rating="2.5"
            android:scaleX=".6"
            android:scaleY=".6"
            android:stepSize="0.5"
            android:transformPivotX="0dp"
            android:transformPivotY="@dimen/_12sdp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>