<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/recycler_background"
        tools:context=".MainActivity">

        <View
            android:id="@+id/overToolbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/_32sdp"
            android:background="@color/toolbar_color"
            android:elevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="@dimen/_360sdp"
            android:layout_height="@dimen/_56sdp"
            android:background="@drawable/background_toolbar"
            android:elevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnToolbarBack"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_gravity="top"
                android:padding="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:src="@drawable/back_navigation_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvToolbarUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:text="@string/user"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnToolbarInfo"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_gravity="end|top"
                android:padding="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:src="@drawable/image" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvToolbarMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_tv_calendar"
            android:elevation="@dimen/_16sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_46sdp"
            android:text="@string/november"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--                <include layout="@layout/content_main" />-->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/guideline_start_percent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/guideline_end_percent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:elevation="1dp"
            app:layout_constraintGuide_begin="@dimen/_40sdp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment_content_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="1dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/coordinatorBottomNavigation"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/guideLineTop"
            app:layout_constraintVertical_bias="1.0"
            app:navGraph="@navigation/nav_graph" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorBottomNavigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigation"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                app:labelVisibilityMode="labeled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/menu_bottom_navigation" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:contentDescription="@string/test_fab"
            app:layout_constraintBottom_toTopOf="@+id/coordinatorBottomNavigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/sym_action_chat" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabBottomNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_8sdp"
            android:contentDescription="@string/test_fab"
            android:backgroundTint="@color/white"
            app:borderWidth="0dp"
            app:elevation="@dimen/_18sdp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/qr_code_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>